feat: veri isleyen (client_processors) CRUD + aktarim-adlari ucu
